fix(chat-ui): align mobile listen ask panel with player current element

--- a/src/cook-web/src/app/c/[[...id]]/Components/ChatUi/ListenModeRenderer.scss
+++ b/src/cook-web/src/app/c/[[...id]]/Components/ChatUi/ListenModeRenderer.scss
@@ -305,6 +305,7 @@
     width: 100%;
     min-height: 80px;
     height: 80px;
+    grid-template-columns: repeat(4, minmax(0, 1fr)) !important;
     border-radius: 0 !important;
     border-left: 0 !important;
     border-right: 0 !important;
